✨ add crud for machines

--- a/Factory/Views/Shared/_Layout.cshtml
+++ b/Factory/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Hair Salon</title>
+  <title>FACTORY</title>
   <link rel="stylesheet" href="~/styles/reset.css" />
   <link rel="stylesheet" href="~/styles/root.css" />
 </head>
