--- a/Factory/Views/Machines/Details.cshtml
+++ b/Factory/Views/Machines/Details.cshtml
@@ -11,10 +11,7 @@
   <table>
     <thead>
       <tr>
-        <th colspan="2">Licensed Engineers</th>
-      </tr>
-      <tr>
-        <th>Name</th>
+        <th>Licensed Engineers</th>
       </tr>
     </thead>
     <tbody>
