--- a/Factory/Static/styles/root.css
+++ b/Factory/Static/styles/root.css
@@ -1,24 +1,34 @@
 :root {
-  --color-bg: black;
-  --color-tint: #fff1;
+  --color-bg: #555;
+  --color-fg: #fca;
 }
 
 :root body {
-  background: var(--color-bg);
-}
-
-:root body * {
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-}
-
-:root body header {
-  font-size: 10vmin;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  background: var(--color-bg);
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100vh;
+}
+
+:root body header {
+  z-index: 10;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  min-width: 60vw;
+  position: relative;
+  width: 100%;
+  margin: 0 auto;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -35,10 +45,6 @@
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-}
-
-:root body header h1 {
-  margin-top: 9px;
   -webkit-box-flex: 0;
       -ms-flex-positive: 0;
           flex-grow: 0;
@@ -47,20 +53,49 @@
   width: -moz-fit-content;
   width: fit-content;
   line-height: 1.05em;
-  margin: auto;
 }
 
-:root body header h1 span {
-  margin-right: -6.4vmin;
-  padding: 0 3.2vmin;
-  background: black;
-  color: white;
+:root body header * > span {
+  background: var(--color-bg);
+  margin-right: -0.32em;
+  padding: 0 0.16em;
+  margin-top: 0.09em;
+}
+
+:root body header h1,
+:root body header h1 > * {
+  font-size: 20vmin;
+  margin-left: -0.09em;
+}
+
+:root body header h1 ~ h2,
+:root body header h1 > * ~ h2 {
+  border: 0.365em solid var(--color-fg);
+  border-left: none;
+  border-right: none;
+}
+
+:root body header h2,
+:root body header h2 > * {
+  font-size: 8.92vmin;
+  margin-left: -0.05em;
+}
+
+:root body header h2 ~ h3,
+:root body header h2 > * ~ h3 {
+  border: 0.38em solid var(--color-fg);
+  border-left: none;
+  border-right: none;
+}
+
+:root body header h3,
+:root body header h3 > * {
+  font-size: 4.4vmin;
 }
 
 :root body nav {
   position: absolute;
   top: 0px;
-  z-index: -10;
   width: 100vw;
   height: 100vh;
   display: -webkit-box;
@@ -82,14 +117,200 @@
       -ms-flex-align: center;
           align-items: center;
   text-decoration: none;
-  background: #fff0;
-  color: white;
+  color: var(--color-fg);
 }
 
 :root body nav > a:hover {
   -webkit-transform: scale(1.02);
           transform: scale(1.02);
-  background: white;
-  color: black;
+  background: var(--color-fg);
+  color: var(--color-bg);
+}
+
+:root body main > a,
+:root body main > p,
+:root body main > h3 {
+  max-width: 600px;
+  margin: auto;
+}
+
+:root body main {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  width: auto;
+  position: relative;
+  margin: 50px auto;
+  padding: 0px 20px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-width: 60vw;
+  max-width: calc(100vw - 100px);
+  max-height: 60vh;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+}
+
+:root body main form ~ form {
+  margin-bottom: 10px;
+  padding-bottom: 20px;
+  border-bottom: 20px dashed var(--color-fg);
+}
+
+:root body main > span {
+  text-align: center;
+  width: 100px;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+}
+
+:root body main > ul {
+  list-style-type: square;
+}
+
+:root body main > ul form {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+:root body main > ul form input {
+  text-transform: lowercase;
+  height: 1.2em;
+  line-height: 0.9em;
+  font-size: 3vmin;
+  padding-bottom: 0.2em;
+}
+
+:root body main::before, :root body main::after {
+  content: "";
+  border: 20px solid var(--color-fg);
+  position: absolute;
+  height: 70px;
+  width: 100px;
+}
+
+:root body main::before {
+  top: -20px;
+  left: -20px;
+  border-bottom: none;
+  border-right: none;
+}
+
+:root body main::after {
+  bottom: -20px;
+  right: -20px;
+  border-top: none;
+  border-left: none;
+}
+
+:root body footer {
+  position: relative;
+  min-width: 60vw;
+  width: calc(100%);
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  padding-bottom: 15px;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+:root body footer > * + * {
+  margin-left: 2px;
+}
+
+* {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  color: var(--color-fg);
+  font-size: 6vmin;
+  text-transform: uppercase;
+}
+
+main a,
+main input,
+footer a,
+footer input {
+  cursor: pointer;
+  background: var(--color-fg);
+  color: var(--color-bg);
+  text-decoration: none;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border: 3px solid var(--color-fg);
+  padding: 1px 3px;
+}
+
+main a:hover, main a:focus,
+main input:hover,
+main input:focus,
+footer a:hover,
+footer a:focus,
+footer input:hover,
+footer input:focus {
+  background: var(--color-bg);
+  color: var(--color-fg);
+}
+
+form {
+  min-width: 600px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+form > input {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  display: inline;
+}
+
+form > input + input {
+  margin-top: 10px;
+}
+
+table {
+  border: 5px solid var(--color-fg);
+}
+
+table thead tr th {
+  text-align: left;
+  padding: 5px;
+  background: var(--color-fg);
+  color: var(--color-bg);
+}
+
+table tbody tr td {
+  padding: 20px 15px;
+  border-top: 5px solid var(--color-fg);
+}
+
+table tbody tr td + td {
+  border-left: 5px solid var(--color-fg);
 }
 /*# sourceMappingURL=root.css.map */
